[package]
name = "concentric-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "master", features = ["web"] }
web-sys = { version = "0.3.56", features = ["console"] }
