[package]
name = "concentric-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-timer = "1.0.0-beta.8"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "master", features = ["web"] }
js-sys = "0.3.56"
